feed.xml -> feed.rss

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<h2>All Episodes from The WAN Show + Linus Tech Tips Live Show Archive</h2>
 			<ul>
 				<li>
-					<a href="https://wanshow.brams.dev/feed.xml">
+					<a href="https://wanshow.brams.dev/feed.rss">
 						<img src="./rss.svg" alt="rss logo">
 						<span>rss</span>
 					</a>
